Fix points alignment in posts

--- a/packages/cd-components/src/atoms/points/points.module.scss
+++ b/packages/cd-components/src/atoms/points/points.module.scss
@@ -1,23 +1,28 @@
+@import "../../styles/variables/colors";
+@import "../../styles/variables/fonts";
+
 .container {
-  width: 20%;
   padding: 0.55rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding-left: 24px;
-}
 
-.points {
-  color: rgba(0, 0, 0, 0.6);
-  font-size: 0.85rem;
-  width: 65%;
-  padding: 0.25rem 0;
-}
+  .arrow {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 1.1rem;
+    cursor: pointer;
+  }
 
-.arrow {
-  color: rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-}
+  .arrow:first-of-type {
+    margin-top: 0.7rem;
+  }
 
-.arrow:first-of-type {
-  margin-top: 0.7rem;
+  .points {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: calc($medium + 0.36rem);
+    width: 65%;
+    padding: 0.25rem 0;
+    display: flex;
+  }
 }
